--- a/dockerfiles/Dockerfile
+++ b/dockerfiles/Dockerfile
@@ -7,6 +7,7 @@ RUN yum -y install gdal-python\
                    proj-nad\
                    postgresql-devel
 
-COPY ./requirements.txt /opt/
+COPY requirements.txt /opt/
+RUN echo 'source /opt/streamwebs/dockerfiles/startup.sh' >> /root/.bash_profile
 
 RUN pip install -r /opt/requirements.txt
