--- a/dockerfiles/Dockerfile
+++ b/dockerfiles/Dockerfile
@@ -7,7 +7,10 @@ RUN yum -y install gdal-python\
                    proj-nad\
                    postgresql-devel\
                    nodejs\
-                   npm
+                   npm\
+                   freetype-devel\
+                   libjpeg-devel\
+                   libpng-devel
 
 RUN npm install -g bower
 
