--- a/.travis.yml
+++ b/.travis.yml
@@ -19,3 +19,4 @@ addons:
 before_script:
   - psql -c 'create database streamwebs;' -U postgres
   - psql -U postgres -c "create extension postgis"
+  - cp settings.py.dist settings.py
