--- a/streamwebs_frontend/streamwebs_frontend/settings.py.dist
+++ b/streamwebs_frontend/streamwebs_frontend/settings.py.dist
@@ -39,7 +39,7 @@ RECAPTCHA_PRIVATE_KEY = '6Lep3yQTAAAAAMRW7tnIDr2NUV77CWPRJ96wmWo3'
 NOCAPTCHA = True
 
 # Google maps API key
-GOOGLE_MAPS_API = 'AIzaSyCHaUYTiJJ2RZtqstos6VAFFUxN5I6saIA'
+GOOGLE_MAPS_API = ''
 
 #Google maps map Type
 GOOGLE_MAPS_TYPE = 'google.maps.MapTypeId.TERRAIN'
@@ -54,7 +54,7 @@ EMAIL_HOST = 'smtp.osuosl.org'
 EMAIL_PORT = 465
 EMAIL_USE_TLS = False
 EMAIL_USE_SSL = True
-DEFAULT_FROM_EMAIL = 'TestSite Team <noreply@example.com>'
+DEFAULT_FROM_EMAIL = 'StreamWebs Team <noreply@example.com>'
 
 # Application definition
 
